# JisakuEngine

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  README.md  app_debug.txt  debug.txt  imgui.ini  swapchain_create_debug.txt  swapchain_debug.txt  vcpkg.json
shaders/: TexturedQuad.hlsl  Triangle.hlsl  fullscreen.hlsl
src/: main.cpp
src/app/: App.cpp  App.h
src/core/: InputManager.cpp  InputManager.h
src/gfx/: DX12Device.cpp  DX12Device.h  GPUTimer.cpp  GPUTimer.h  RenderPass_Clear.cpp  RenderPass_Clear.h  RenderPass_TexturedQuad.cpp  RenderPass_TexturedQuad.h  RenderPass_Triangle.cpp  RenderPass_Triangle.h  ShaderReloader.cpp  ShaderReloader.h  Swapchain.cpp  Swapchain.h  TextureLoader.cpp  TextureLoader.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h
